# OCLODE

./: CMakeLists.txt  Clustering.cpp  Clustering.h  Orthology.cpp  Orthology.h  README  SpeciesNetwork.cpp  SpeciesNetwork.h  main.cpp  run.sh
makedir/: run.sh
